ui-tests/tests/snapshots/artichoke__e_flag_dash_dash_argv.snap
---
source: tests/artichoke.rs
assertion_line: 39
expression: "run(BINARY, &[\"-e\", \"puts ARGV.inspect\", \"--\", \"a\", \"b\", \"c\"]).unwrap()"

---
call_args = [
    '-e',
    'puts ARGV.inspect',
    '--',
    'a',
    'b',
    'c',
]
status = 0
stdout = '"[\"a\", \"b\", \"c\"]"'
stderr = ''
